{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 17,
  "lineage": "26086519-1150-84d6-e06b-691728bc4c8e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:route-table/rtb-0f6172c4b85b8ad27",
            "default_route_table_id": "rtb-0f6172c4b85b8ad27",
            "id": "rtb-0f6172c4b85b8ad27",
            "owner_id": "939735320461",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "test-vpc-default-route"
            },
            "tags_all": {
              "Name": "test-vpc-default-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d8cbbdcf6dcf074"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:security-group/sg-06963e83090901495",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-06963e83090901495",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "939735320461",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-vpc-default-sg"
            },
            "tags_all": {
              "Name": "test-vpc-default-sg"
            },
            "vpc_id": "vpc-03d8cbbdcf6dcf074"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0559fe2d45c0cd825",
            "domain": "vpc",
            "id": "eipalloc-0559fe2d45c0cd825",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-13-124-115-219.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.124.115.219",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:internet-gateway/igw-0bf9b54d29429c3e3",
            "id": "igw-0bf9b54d29429c3e3",
            "owner_id": "939735320461",
            "tags": {
              "Name": "test-vpc-igw"
            },
            "tags_all": {
              "Name": "test-vpc-igw"
            },
            "vpc_id": "vpc-03d8cbbdcf6dcf074"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0559fe2d45c0cd825",
            "association_id": "eipassoc-02939ee28ce3ac8d0",
            "connectivity_type": "public",
            "id": "nat-0adcca3771bba7a44",
            "network_interface_id": "eni-029d2fe33c92051b7",
            "private_ip": "10.0.0.108",
            "public_ip": "13.124.115.219",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04989e804978c7903",
            "tags": {
              "Name": "test-vpc-ngw"
            },
            "tags_all": {
              "Name": "test-vpc-ngw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:route-table/rtb-0e8acc8cad7b36ba9",
            "id": "rtb-0e8acc8cad7b36ba9",
            "owner_id": "939735320461",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0adcca3771bba7a44",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-vpc-route-pri"
            },
            "tags_all": {
              "Name": "test-vpc-route-pri"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d8cbbdcf6dcf074"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.test",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:route-table/rtb-02473110360f8e1b6",
            "id": "rtb-02473110360f8e1b6",
            "owner_id": "939735320461",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bf9b54d29429c3e3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-vpc-route-pub"
            },
            "tags_all": {
              "Name": "test-vpc-route-pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d8cbbdcf6dcf074"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.test",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routing-asso-pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0faf5f126c229d7b5",
            "route_table_id": "rtb-0e8acc8cad7b36ba9",
            "subnet_id": "subnet-08872fb97931b0a66"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.test",
            "aws_route_table.private_route",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e207f614b0122149",
            "route_table_id": "rtb-0e8acc8cad7b36ba9",
            "subnet_id": "subnet-0e34da52cf4fb22d0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.test",
            "aws_route_table.private_route",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routing-asso-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d703f8ff8d564ebd",
            "route_table_id": "rtb-02473110360f8e1b6",
            "subnet_id": "subnet-04989e804978c7903"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.test",
            "aws_route_table.public_route",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072d630bbcd5f2723",
            "route_table_id": "rtb-02473110360f8e1b6",
            "subnet_id": "subnet-0f96a11418da93c29"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.test",
            "aws_route_table.public_route",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:subnet/subnet-08872fb97931b0a66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08872fb97931b0a66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "939735320461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-vpc-private-subnet-1"
            },
            "tags_all": {
              "Name": "test-vpc-private-subnet-1"
            },
            "vpc_id": "vpc-03d8cbbdcf6dcf074"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:subnet/subnet-0e34da52cf4fb22d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e34da52cf4fb22d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "939735320461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-vpc-private-subnet-2"
            },
            "tags_all": {
              "Name": "test-vpc-private-subnet-2"
            },
            "vpc_id": "vpc-03d8cbbdcf6dcf074"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:subnet/subnet-04989e804978c7903",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04989e804978c7903",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "939735320461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-vpc-public-subnet-1"
            },
            "tags_all": {
              "Name": "test-vpc-public-subnet-1"
            },
            "vpc_id": "vpc-03d8cbbdcf6dcf074"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:subnet/subnet-0f96a11418da93c29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f96a11418da93c29",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "939735320461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-vpc-public-subnet-2"
            },
            "tags_all": {
              "Name": "test-vpc-public-subnet-2"
            },
            "vpc_id": "vpc-03d8cbbdcf6dcf074"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:vpc/vpc-03d8cbbdcf6dcf074",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-081968bc6dd27da4a",
            "default_route_table_id": "rtb-0f6172c4b85b8ad27",
            "default_security_group_id": "sg-06963e83090901495",
            "dhcp_options_id": "dopt-0946a0de0cb1bcec9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03d8cbbdcf6dcf074",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f6172c4b85b8ad27",
            "owner_id": "939735320461",
            "tags": {
              "Name": "test-vpc"
            },
            "tags_all": {
              "Name": "test-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}